--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.2",
     "@tailwindcss/vite": "^4.1.13",
+    "@tanstack/react-query": "^5.87.4",
     "@tanstack/react-router": "^1.131.41",
     "@tanstack/react-router-devtools": "^1.131.42",
     "chart.js": "^4.5.0",
@@ -20,13 +21,13 @@
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
-    "react-router": "^7.8.2",
     "tailwindcss": "^4.1.13",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/css": "^0.11.0",
     "@eslint/js": "^9.35.0",
+    "@tanstack/eslint-plugin-router": "^1.131.2",
     "@tanstack/router-plugin": "^1.131.41",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
