--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "tailwindcss": "^4.1.13",
+    "zod": "^4.1.8",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
