--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-router": "^1.131.41",
     "@tanstack/react-router-devtools": "^1.131.42",
     "chart.js": "^4.5.0",
+    "date-fns": "^4.1.0",
     "radix-ui": "^1.4.3",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
